Refactor notifications extract